@@ -2,11 +2,11 @@
  * 
  * DO NOT EDIT THIS FILE   (fixincl.x)
  * 
- * It has been AutoGen-ed  Tuesday September  8, 2009 at 07:26:10 PM CEST
+ * It has been AutoGen-ed  Tuesday September 15, 2009 at 06:55:13 AM CEST
  * From the definitions    inclhack.def
  * and the template file   fixincl
  */
-/* DO NOT SVN-MERGE THIS FILE, EITHER Di 8. Sep 19:26:11 CEST 2009
+/* DO NOT SVN-MERGE THIS FILE, EITHER Di 15. Sep 06:55:13 CEST 2009
  *
  * You must regenerate it.  Use the ./genfixes script.
  *
@@ -15,7 +15,7 @@
  * certain ANSI-incompatible system header files which are fixed to work
  * correctly with ANSI C and placed in a directory that GNU C will search.
  *
- * This file contains 206 fixup descriptions.
+ * This file contains 202 fixup descriptions.
  *
  * See README for more information.
  *
@@ -4822,76 +4822,6 @@ static const char* apzIrix_WcsftimePatch[] = {
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * *
  *
- *  Description of Isc_Fmod fix
- */
-tSCC zIsc_FmodName[] =
-     "isc_fmod";
-
-/*
- *  File name selection pattern
- */
-tSCC zIsc_FmodList[] =
-  "math.h\0";
-/*
- *  Machine/OS name selection pattern
- */
-#define apzIsc_FmodMachs (const char**)NULL
-
-/*
- *  content selection pattern - do fix if pattern found
- */
-tSCC zIsc_FmodSelect0[] =
-       "fmod\\(double\\)";
-
-#define    ISC_FMOD_TEST_CT  1
-static tTestDesc aIsc_FmodTests[] = {
-  { TT_EGREP,    zIsc_FmodSelect0, (regex_t*)NULL }, };
-
-/*
- *  Fix Command Arguments for Isc_Fmod
- */
-static const char* apzIsc_FmodPatch[] = {
-    "format",
-    "fmod(double, double)",
-    (char*)NULL };
-
-/* * * * * * * * * * * * * * * * * * * * * * * * * *
- *
- *  Description of Isc_Omits_With_Stdc fix
- */
-tSCC zIsc_Omits_With_StdcName[] =
-     "isc_omits_with_stdc";
-
-/*
- *  File name selection pattern
- */
-tSCC zIsc_Omits_With_StdcList[] =
-  "stdio.h\0math.h\0ctype.h\0sys/limits.h\0sys/fcntl.h\0sys/dirent.h\0";
-/*
- *  Machine/OS name selection pattern
- */
-#define apzIsc_Omits_With_StdcMachs (const char**)NULL
-
-/*
- *  content selection pattern - do fix if pattern found
- */
-tSCC zIsc_Omits_With_StdcSelect0[] =
-       "!defined\\(__STDC__\\) && !defined\\(_POSIX_SOURCE\\)";
-
-#define    ISC_OMITS_WITH_STDC_TEST_CT  1
-static tTestDesc aIsc_Omits_With_StdcTests[] = {
-  { TT_EGREP,    zIsc_Omits_With_StdcSelect0, (regex_t*)NULL }, };
-
-/*
- *  Fix Command Arguments for Isc_Omits_With_Stdc
- */
-static const char* apzIsc_Omits_With_StdcPatch[] = {
-    "format",
-    "!defined(_POSIX_SOURCE)",
-    (char*)NULL };
-
-/* * * * * * * * * * * * * * * * * * * * * * * * * *
- *
  *  Description of Kandr_Concat fix
  */
 tSCC zKandr_ConcatName[] =
@@ -5242,41 +5172,6 @@ static tTestDesc aNested_Auth_DesTests[] = {
 static const char* apzNested_Auth_DesPatch[] = {
     "format",
     "%1*/ /*",
-    (char*)NULL };
-
-/* * * * * * * * * * * * * * * * * * * * * * * * * *
- *
- *  Description of Nested_Sys_Limits fix
- */
-tSCC zNested_Sys_LimitsName[] =
-     "nested_sys_limits";
-
-/*
- *  File name selection pattern
- */
-tSCC zNested_Sys_LimitsList[] =
-  "sys/limits.h\0";
-/*
- *  Machine/OS name selection pattern
- */
-#define apzNested_Sys_LimitsMachs (const char**)NULL
-
-/*
- *  content selection pattern - do fix if pattern found
- */
-tSCC zNested_Sys_LimitsSelect0[] =
-       "CHILD_MAX";
-
-#define    NESTED_SYS_LIMITS_TEST_CT  1
-static tTestDesc aNested_Sys_LimitsTests[] = {
-  { TT_EGREP,    zNested_Sys_LimitsSelect0, (regex_t*)NULL }, };
-
-/*
- *  Fix Command Arguments for Nested_Sys_Limits
- */
-static const char* apzNested_Sys_LimitsPatch[] = { sed_cmd_z,
-    "-e", "/CHILD_MAX/s,/\\* Max, Max,",
-    "-e", "/OPEN_MAX/s,/\\* Max, Max,",
     (char*)NULL };
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * *
@@ -6142,60 +6037,6 @@ static tTestDesc aRs6000_ParamTests[] = {
 static const char* apzRs6000_ParamPatch[] = {
     "format",
     "rename(const char *_old, const char *_new)",
-    (char*)NULL };
-
-/* * * * * * * * * * * * * * * * * * * * * * * * * *
- *
- *  Description of Sco_Math fix
- */
-tSCC zSco_MathName[] =
-     "sco_math";
-
-/*
- *  File name selection pattern
- */
-tSCC zSco_MathList[] =
-  "math.h\0*/math.h\0";
-/*
- *  Machine/OS name selection pattern
- */
-#define apzSco_MathMachs (const char**)NULL
-
-/*
- *  content selection pattern - do fix if pattern found
- */
-tSCC zSco_MathSelect0[] =
-       "inline double abs";
-
-/*
- *  content bypass pattern - skip fix if pattern found
- */
-tSCC zSco_MathBypass0[] =
-       "__GNUG__";
-
-#define    SCO_MATH_TEST_CT  2
-static tTestDesc aSco_MathTests[] = {
-  { TT_NEGREP,   zSco_MathBypass0, (regex_t*)NULL },
-  { TT_EGREP,    zSco_MathSelect0, (regex_t*)NULL }, };
-
-/*
- *  Fix Command Arguments for Sco_Math
- */
-static const char* apzSco_MathPatch[] = { sed_cmd_z,
-    "-e", "/#define.*__fp_class(a) \\\\/i\\\n\
-#ifndef __GNUC__\n",
-    "-e", "/.*__builtin_generic/a\\\n\
-#else\\\n\
-#define __fp_class(a) \\\\\\\n\
-\\  __builtin_choose_expr(__builtin_types_compatible_p(typeof(a),long double),\\\\\\\n\
-\\   __fpclassifyl(a), \\\\\\\n\
-\\    __builtin_choose_expr(__builtin_types_compatible_p(typeof(a), float), \\\\\\\n\
-\\      __fpclassifyf(a),__fpclassify(a)))\\\n\
-#endif\n",
-    "-e", "/extern \"C++\"/N;/inline double abs/i\\\n\
-#ifndef __GNUC__\n",
-    "-e", "/inline long double trunc/N;/inline long double trunc.*}.*extern \"C++\"/a\\\n\
-#endif /* ! __GNUC__ */\n",
     (char*)NULL };
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * *
@@ -8402,9 +8243,9 @@ static const char* apzX11_SprintfPatch[] = {
  *
  *  List of all fixes
  */
-#define REGEX_COUNT          249
+#define REGEX_COUNT          244
 #define MACH_LIST_SIZE_LIMIT 181
-#define FIX_COUNT            206
+#define FIX_COUNT            202
 
 /*
  *  Enumerate the fixes
@@ -8527,8 +8368,6 @@ typedef enum {
     IRIX_STDINT_C99_FIXIDX,
     IRIX_STDIO_VA_LIST_FIXIDX,
     IRIX_WCSFTIME_FIXIDX,
-    ISC_FMOD_FIXIDX,
-    ISC_OMITS_WITH_STDC_FIXIDX,
     KANDR_CONCAT_FIXIDX,
     LINUX_IA64_UCONTEXT_FIXIDX,
     LYNXOS_NO_WARNING_IN_SYS_TIME_H_FIXIDX,
@@ -8538,7 +8377,6 @@ typedef enum {
     MATH_EXCEPTION_FIXIDX,
     MATH_HUGE_VAL_FROM_DBL_MAX_FIXIDX,
     NESTED_AUTH_DES_FIXIDX,
-    NESTED_SYS_LIMITS_FIXIDX,
     NETBSD_C99_INLINE_1_FIXIDX,
     NETBSD_C99_INLINE_2_FIXIDX,
     NETBSD_EXTRA_SEMICOLON_FIXIDX,
@@ -8561,7 +8399,6 @@ typedef enum {
     RS6000_DOUBLE_FIXIDX,
     RS6000_FCHMOD_FIXIDX,
     RS6000_PARAM_FIXIDX,
-    SCO_MATH_FIXIDX,
     SOLARIS_COMPLEX_FIXIDX,
     SOLARIS_MATH_1_FIXIDX,
     SOLARIS_MATH_2_FIXIDX,
@@ -9204,16 +9041,6 @@ tFixDesc fixDescList[ FIX_COUNT ] = {
      IRIX_WCSFTIME_TEST_CT, FD_MACH_ONLY | FD_SUBROUTINE,
      aIrix_WcsftimeTests,   apzIrix_WcsftimePatch, 0 },
 
-  {  zIsc_FmodName,    zIsc_FmodList,
-     apzIsc_FmodMachs,
-     ISC_FMOD_TEST_CT, FD_MACH_ONLY | FD_SUBROUTINE,
-     aIsc_FmodTests,   apzIsc_FmodPatch, 0 },
-
-  {  zIsc_Omits_With_StdcName,    zIsc_Omits_With_StdcList,
-     apzIsc_Omits_With_StdcMachs,
-     ISC_OMITS_WITH_STDC_TEST_CT, FD_MACH_ONLY | FD_SUBROUTINE,
-     aIsc_Omits_With_StdcTests,   apzIsc_Omits_With_StdcPatch, 0 },
-
   {  zKandr_ConcatName,    zKandr_ConcatList,
      apzKandr_ConcatMachs,
      KANDR_CONCAT_TEST_CT, FD_MACH_ONLY | FD_SUBROUTINE,
@@ -9258,11 +9085,6 @@ tFixDesc fixDescList[ FIX_COUNT ] = {
      apzNested_Auth_DesMachs,
      NESTED_AUTH_DES_TEST_CT, FD_MACH_ONLY | FD_SUBROUTINE,
      aNested_Auth_DesTests,   apzNested_Auth_DesPatch, 0 },
-
-  {  zNested_Sys_LimitsName,    zNested_Sys_LimitsList,
-     apzNested_Sys_LimitsMachs,
-     NESTED_SYS_LIMITS_TEST_CT, FD_MACH_ONLY,
-     aNested_Sys_LimitsTests,   apzNested_Sys_LimitsPatch, 0 },
 
   {  zNetbsd_C99_Inline_1Name,    zNetbsd_C99_Inline_1List,
      apzNetbsd_C99_Inline_1Machs,
@@ -9373,11 +9195,6 @@ tFixDesc fixDescList[ FIX_COUNT ] = {
      apzRs6000_ParamMachs,
      RS6000_PARAM_TEST_CT, FD_MACH_ONLY | FD_SUBROUTINE,
      aRs6000_ParamTests,   apzRs6000_ParamPatch, 0 },
-
-  {  zSco_MathName,    zSco_MathList,
-     apzSco_MathMachs,
-     SCO_MATH_TEST_CT, FD_MACH_ONLY,
-     aSco_MathTests,   apzSco_MathPatch, 0 },
 
   {  zSolaris_ComplexName,    zSolaris_ComplexList,
      apzSolaris_ComplexMachs,
