@@ -54,13 +54,6 @@ extern int printf( const char *, __gnuc_va_list );
 #endif  /* IRIX_STDIO_DUMMY_VA_LIST_CHECK */
 
 
-#if defined( ISC_OMITS_WITH_STDC_CHECK )
-#if !defined(_POSIX_SOURCE) /* ? ! */
-int foo;
-#endif
-#endif  /* ISC_OMITS_WITH_STDC_CHECK */
-
-
 #if defined( READ_RET_TYPE_CHECK )
 extern unsigned int fread(), fwrite();
 extern int	fclose(), fflush(), foo();
