@@ -1,17 +1,0 @@
-/*  DO NOT EDIT THIS FILE.
-
-    It has been auto-edited by fixincludes from:
-
-	"fixinc/tests/inc/sys/limits.h"
-
-    This had to be done to correct non-standard usages in the
-    original, manufacturer supplied header file.  */
-
-
-
-#if defined( NESTED_SYS_LIMITS_CHECK )
-/*
-#define CHILD_MAX 20  Max, Max, ... */ /*
-#define OPEN_MAX  20  Max, Max, ... */
-
-#endif  /* NESTED_SYS_LIMITS_CHECK */
